# zinc-fusion-v16

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  kilo.json  package-lock.json  package.json  proxy.ts
.claude/commands/: autogluon-model-review.md  indicator-review.md  pipeline-phase-gate.md  supabase-schema-audit.md
.github/: copilot-instructions.md
.github/agents/: session-start.agent.md  supabase-builder.agent.md
.kilo/: kilo.json
.kilo/commands/: autogluon-database-audit.md  autogluon-model-review.md  data-review.md  indicator-review.md  local-cloud-sync-audit.md  ml-database-audit.md  phase-status.md  pipeline-phase-gate.md  session-start.md  supabase-builder.md  supabase-schema-audit.md
.kilo/plans/: handover-consolidate-agent-instructions.md
.kilo/rules/: architecture.md  autogluon-database.md  autogluon-model-review.md  coding-style.md  (+8 more)
app/: globals.css  layout.tsx  page.tsx
components/: Header.tsx  app-sidebar.tsx  backend-shell.tsx  chart-area-interactive.tsx  forgot-password-form.tsx  login-form.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  section-cards.tsx  sign-up-form.tsx  site-header.tsx  update-password-form.tsx
docs/: what-we-learned-from-our-mistakes.md
python/: pyproject.toml  seed_from_databento.py  seed_from_v15.py  test_connection.py
python/fusion/: __init__.py  build_matrix.py  config.py  generate_forward_forecasts.py  generate_specialist_features.py  generate_specialist_signals.py  generate_target_zones.py  pipeline.py  run_garch.py  run_monte_carlo.py  train_models.py
supabase/: config.toml  seed.sql
(+152 files in other folders)
