[project]
name = "zinc-fusion-v16-pipeline"
version = "0.1.0"
description = "ZINC Fusion v16 Python pipeline scaffold"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
